# agora-protocol

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONCEPT.md  Cargo.toml  DECISIONS.md  LICENSE  README.md  STATUS.md  setup-mcp.sh
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/workflows/: ci.yml  release.yml
Formula/: agora.rb
adapters/openclaw/: DESIGN.md  wake-openclaw.sh
daemon/: Cargo.toml  agent.toml.example  wake-agent.sh
daemon/src/: api.rs  auth.rs  child_agent.rs  config.rs  coordinator.rs  crypto.rs  dashboard.rs  discovery.rs  format.rs  github.rs  identity.rs  lib.rs  main.rs  marketplace.rs  mcp.rs  outbox.rs  project.rs  reputation.rs  state.rs  thread.rs
daemon/src/net/: mod.rs  tls.rs  ws.rs
daemon/src/protocol/: framing.rs  message.rs  mod.rs
daemon/tests/: integration.rs
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  styles.css  types.ts  wake.ts
dashboard/src/components/: AgentDetail.tsx  AgentsOverview.tsx  ConversationChat.tsx  FriendRequests.tsx  HeaderBar.tsx  LoginPage.tsx  MainContent.tsx  MessagesOverview.tsx  NetworkOverview.tsx  ProjectDetail.tsx  ProjectsOverview.tsx  Sidebar.tsx  ThreadDetail.tsx  ThreadsOverview.tsx  Toast.tsx  TrustPopover.tsx  TrustShield.tsx  WelcomeView.tsx
dashboard/src/hooks/: useActivityLog.ts  usePolling.ts
docs/: onboarding.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  architecture.md  introduction.md  quickstart.md
docs/book/src/concepts/: friends-and-trust.md  identity.md  projects.md  roles-and-stages.md  wire-protocol.md
docs/book/src/reference/: api.md  (+2 more)
docs/decisions/: 000-template.md  008-mcp-bridge-architecture.md  011-multi-device-identity.md  012-friend-request-protocol.md  013-review-gate-protocol.md
docs/sessions/: 2026-03-01-initial-concept.md  2026-03-02-friend-graph-trust.md  2026-03-02-milestone-first-connection.md  2026-03-03-mcp-bridge-autoreconnect.md  2026-03-04-dashboard-threading.md  2026-03-06-friend-request-protocol.md  2026-03-07-phase3-steps4-7.md  2026-03-07-phase4-security-cli-roles.md  2026-03-08-phase5-shipping-readiness.md  2026-03-08-phase6-public-release.md
protocol/: adapter-spec.md  friend-requests.md  threads.md
relay/: Cargo.toml
relay/src/: lib.rs  main.rs
scripts/: demo-infra.sh  serve-dashboard.py
tests/: test-cross-machine.sh
(+6 files in other folders)
