[package]
name = "agora"
version = "0.1.0"
edition = "2024"
description = "Agora Protocol daemon — secure peer-to-peer AI agent collaboration"
license = "Apache-2.0"

[lib]
name = "agora_lib"
path = "src/lib.rs"

[[bin]]
name = "agora"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TLS
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.13"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
libc = "0.2"

# Local HTTP API
axum = "0.8"

# Unique IDs
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# Cryptographic identity (Ed25519)
ring = "0.17"
bs58 = "0.5"

# MCP server bridge
rmcp = { version = "0.17", features = ["server", "transport-io", "macros"] }
schemars = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Config file
toml = "0.8"

# Data-at-rest encryption
argon2 = "0.5"

# WebSocket (relay / NAT traversal)
tokio-tungstenite = "0.26"
futures-util = "0.3"

# GitHub integration
octocrab = "0.43"

# API auth tokens
hex = "0.4"

# Embed dashboard static files into the binary
rust-embed = { version = "8", features = ["debug-embed"] }
mime_guess = "2"

[dev-dependencies]
tempfile = "3"
